gh-3136 Improve in app lookup logging, add tests